# flat-v6

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  flat-v6.sln
.devcontainer/: Dockerfile
.github/workflows/: build.yaml
docs/: coding-style.md  compilation-pipeline.md  constraints.md  generics.md  semantic-analysis.md  type_system.md
examples/: generic_ideas.fl  messagebox.fl  range_ideas.fl  test1.fl  test2.fl
examples/ideas/: generic_ideas.fl  modules.fl
examples/modules/: main.fl  std.vec3.fl
examples/tests/: generics.fl
flat-v6/: .clang-format  compiler.cpp  compiler.hpp  environment.cpp  environment.hpp  flat-v6.cpp  flat-v6.vcxproj  flat-v6.vcxproj.filters  pch.h
flat-v6/ast/: ast.hpp  ast_node.hpp  declaration.hpp  expression.hpp  operator.hpp  source_file.hpp  statement.hpp  type.hpp
flat-v6/data/: ast.hpp  enum.hpp  ir.hpp  operator.hpp  source_ref.hpp  source_reference.hpp  token.hpp  type.hpp
flat-v6/ir/: constraint.hpp  expression.hpp  function.hpp  ir.hpp  ir_node.hpp  module.hpp  statement.hpp  type.hpp
flat-v6/lexer/: lexer.cpp  lexer.hpp
flat-v6/parser/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
flat-v6/passes/: codegen_pass.cpp  codegen_pass.hpp  constraint_extraction_pass.cpp  constraint_extraction_pass.hpp  constraint_instantiation_fixup_pass.cpp  constraint_instantiation_fixup_pass.hpp  constraint_population_pass.cpp  constraint_population_pass.hpp  function_extraction_pass.cpp  function_extraction_pass.hpp  function_population_pass.cpp  function_population_pass.hpp  generic_lowering_pass.cpp  generic_lowering_pass.hpp  ir_pass.cpp  ir_pass.hpp  ir_pass_.cpp  ir_pass_.hpp  lowering_pass.cpp  lowering_pass.hpp  module_extraction_pass.cpp  module_extraction_pass.hpp  module_import_population_pass.cpp  module_import_population_pass.hpp  no_op_pass.cpp  no_op_pass.hpp  operator_lowering_pass.cpp  operator_lowering_pass.hpp  semantic_pass.cpp  semantic_pass.hpp  semantic_pass_.cpp  semantic_pass_.hpp  struct_extraction_pass.cpp  struct_extraction_pass.hpp  struct_instantiation_fixup_pass.cpp  struct_instantiation_fixup_pass.hpp  struct_population_pass.cpp  struct_population_pass.hpp
flat-v6/passes/analysis/: semantic_pass.cpp  semantic_pass.hpp
flat-v6/passes/codegen/: codegen_pass.cpp  codegen_pass.hpp
flat-v6/passes/extraction/: constraint_extraction_pass.cpp  constraint_extraction_pass.hpp  function_extraction_pass.cpp  function_extraction_pass.hpp  module_extraction_pass.cpp  module_extraction_pass.hpp  struct_extraction_pass.cpp  struct_extraction_pass.hpp
flat-v6/passes/lowering/: generic_lowering_pass.cpp  generic_lowering_pass.hpp  operator_lowering_pass.cpp  operator_lowering_pass.hpp
flat-v6/passes/population/: constraint_population_pass.cpp  constraint_population_pass.hpp  function_population_pass.cpp  function_population_pass.hpp  module_import_population_pass.cpp  module_import_population_pass.hpp  struct_population_pass.cpp  struct_population_pass.hpp
flat-v6/passes/support/: ast_type_resolver.cpp  ast_type_resolver.hpp  call_target_resolver.cpp  call_target_resolver.hpp  constraint_instantiator.cpp  constraint_instantiator.hpp  formatter.cpp  formatter.hpp  function_body_instantiator.cpp  function_body_instantiator.hpp  function_instantiator.cpp  function_instantiator.hpp  instantiator.cpp  instantiator.hpp  struct_instantiator.cpp  struct_instantiator.hpp
flat-v6/passes/update/: constraint_instantiation_fixup_pass.cpp  constraint_instantiation_fixup_pass.hpp  constraint_instantiation_update_pass.cpp  constraint_instantiation_update_pass.hpp  function_instantiation_update_pass.cpp  function_instantiation_update_pass.hpp  struct_instantiation_fixup_pass.cpp  struct_instantiation_fixup_pass.hpp  struct_instantiation_update_pass.cpp  struct_instantiation_update_pass.hpp
flat-v6/support/: formatter.cpp  formatter.hpp
flat-v6/type/: type.cpp  type.hpp
flat-v6/util/: assert.hpp  ast_context.hpp  error_logger.cpp  error_logger.hpp  graph_context.hpp  iterable.hpp  md_container.hpp  metadata_prop.hpp  optional_ref.hpp  ref_visitor.hpp  string_switch.hpp  to_vector.hpp  type_id.hpp  visitor.hpp  zip_view.hpp
tests/comments/: main.fl
tests/generics/: main.fl  vec3.fl
tests/int2string/: main.fl
tests/libc/: main.fl
tests/output/: main.fl
tests/vec3/: main.fl
